一堆乱七八糟的引用

--- a/医学思考.md
+++ b/医学思考.md
@@ -1,3 +1,59 @@
 > 医学并不是一门完美的科学，而是一个时刻变幻、难以琢磨的知识系统。不断进步的科学技术指引着我们，当然也有习惯和本能，还要靠一些经验，有时还有运气，然而我们知道的和我们追求的目标之间总会存在一些差距，不过正是这个差距驱使我们更努力地做每一件事。
 
 > We look for medicine to be an orderly field of knowledge and procedure. But it is not. It is an imperfect science, an enterprise of constantly changing knowledge, uncertain information, fallible individuals, and at the same time lives on the line. There is science in what we do, yes, but also habit, intuition, and sometimes plain old guessing. The gap between what we know and what we aim for persists. And this gap complicates everything we do.
+
+我不知道从事医学最后会成为什么样子。
+
+>    仰赖医神阿波罗·埃斯克雷波斯及天地诸神为证，鄙人敬谨直誓，愿以自身能力及判断力所及，遵守此约。
+
+>    凡授我艺者，敬之如父母，作为终身同业伴侣，彼有急需，我接济之。视彼儿女，犹我兄弟，如欲受业，当免费并无条件传授之。
+
+>    凡我所知，无论口授书传，俱传之吾与吾师之子及发誓遵守此约之生徒，此外不传与他人。
+
+>    我愿尽余之能力与判断力所及，遵守为病家谋利益之信条，并检柬一切堕落和害人行为，我不得将危害药品给与他人，并不作该项之指导，虽有人请求亦必不与之。
+>    尤不为妇人施堕胎手术。
+
+>    我愿以此纯洁与神圣之精神，终身执行我职务。
+
+>    凡患结石者，我不施手术，此则有待于专家为之。
+
+>    无论至于何处，遇男或女，贵人及奴婢，我之唯一目的，为病家谋幸福，并检点吾身，不作各种害人及恶劣行为，尤不作诱奸之事。
+
+>    凡我所见所闻，无论有无业务关系，我认为应守秘密者，我愿保守秘密。
+    尚使我严守上述誓言时，请求神祇让我生命与医术能得无上光荣，我苟违誓，天地鬼神实共殛之。
+
+
+> Ὄμνυμι Ἀπόλλωνα ἰητρὸν, καὶ Ἀσκληπιὸν, καὶ Ὑγείαν, καὶ Πανάκειαν, καὶ θεοὺς πάντας τε καὶ πάσας, ἵστορας ποιεύμενος, ἐπιτελέα ποιήσειν κατὰ δύναμιν καὶ κρίσιν ἐμὴν ὅρκον τόνδε καὶ ξυγγραφὴν τήνδε.
+
+> Ἡγήσασθαι μὲν τὸν διδάξαντά με τὴν τέχνην ταύτην ἴσα γενέτῃσιν ἐμοῖσι, καὶ βίου κοινώσασθαι, καὶ χρεῶν χρηίζοντι μετάδοσιν ποιήσασθαι, καὶ γένος τὸ ἐξ ωὐτέου ἀδελφοῖς ἴσον ἐπικρινέειν ἄῤῥεσι, καὶ διδάξειν τὴν τέχνην ταύτην, ἢν χρηίζωσι μανθάνειν, ἄνευ μισθοῦ καὶ ξυγγραφῆς, παραγγελίης τε καὶ ἀκροήσιος καὶ τῆς λοιπῆς ἁπάσης μαθήσιος μετάδοσιν ποιήσασθαι υἱοῖσί τε ἐμοῖσι, καὶ τοῖσι τοῦ ἐμὲ διδάξαντος, καὶ μαθηταῖσι συγγεγραμμένοισί τε καὶ ὡρκισμένοις νόμῳ ἰητρικῷ, ἄλλῳ δὲ οὐδενί.
+
+> Διαιτήμασί τε χρήσομαι ἐπ' ὠφελείῃ καμνόντων κατὰ δύναμιν καὶ κρίσιν ἐμὴν, ἐπὶ δηλήσει δὲ καὶ ἀδικίῃ εἴρξειν.
+
+> Οὐ δώσω δὲ οὐδὲ φάρμακον οὐδενὶ αἰτηθεὶς θανάσιμον, οὐδὲ ὑφηγήσομαι ξυμβουλίην τοιήνδε. Ὁμοίως δὲ οὐδὲ γυναικὶ πεσσὸν φθόριον δώσω. Ἁγνῶς δὲ καὶ ὁσίως διατηρήσω βίον τὸν ἐμὸν καὶ τέχνην τὴν ἐμήν.
+
+> Οὐ τεμέω δὲ οὐδὲ μὴν λιθιῶντας, ἐκχωρήσω δὲ ἐργάτῃσιν ἀνδράσι πρήξιος τῆσδε.
+
+> Ἐς οἰκίας δὲ ὁκόσας ἂν ἐσίω, ἐσελεύσομαι ἐπ' ὠφελείῃ καμνόντων, ἐκτὸς ἐὼν πάσης ἀδικίης ἑκουσίης καὶ φθορίης, τῆς τε ἄλλης καὶ ἀφροδισίων ἔργων ἐπί τε γυναικείων σωμάτων καὶ ἀνδρῴων, ἐλευθέρων τε καὶ δούλων.
+
+> Ἃ δ' ἂν ἐν θεραπείῃ ἢ ἴδω, ἢ ἀκούσω, ἢ καὶ ἄνευ θεραπηίης κατὰ βίον ἀνθρώπων, ἃ μὴ χρή ποτε ἐκλαλέεσθαι ἔξω, σιγήσομαι, ἄῤῥητα ἡγεύμενος εἶναι τὰ τοιαῦτα.
+
+> Ὅρκον μὲν οὖν μοι τόνδε ἐπιτελέα ποιέοντι, καὶ μὴ ξυγχέοντι, εἴη ἐπαύρασθαι καὶ βίου καὶ τέχνης δοξαζομένῳ παρὰ πᾶσιν ἀνθρώποις ἐς τὸν αἰεὶ χρόνον. παραβαίνοντι δὲ καὶ ἐπιορκοῦντι, τἀναντία τουτέων.
+
+我不知道最后会不会变成这样：
+
+> 1.我和家人的人身安全、生活幸福和经济利益是我会首先考虑的
+
+> 2.我所服务的对象是付费的病人，而非"人类"全体。我提供服务的目的是取得合理的回报，并非出于高尚的精神
+
+> 3.我不会对所有病人一视同仁，不尊重我的人、威胁我安全的人，将不会得到我的尊重和专心诊疗
+
+> 4.享有人权的前提是拥有人性，我保留在特殊或极端情况下，将医学技术在合法范围内，应用在非人道/不道德用途的权利                                        
+ --2017年新医学生宣言
+
+> 作者：匿名用户
+
+> 链接：https://www.zhihu.com/question/24028104/answer/257479985
+
+> 来源：知乎
+
+> 著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
