杂碎的内容

--- a/医学思考.md
+++ b/医学思考.md
@@ -64,3 +64,7 @@
 
 > 为什么中国的医生们不选择弃医改行？ - 大面包的回答 - 知乎
 https://www.zhihu.com/question/21914577/answer/19860893
+
+我个人的研究兴趣：
+
+在医疗领域，对于患者信息的准确掌握与否关系到疗效的好坏，乃至患者是否存活。除此以外，实验室内的许多研究成果快速运用到临床。转化医学的核心是在基础研究人员和临床医生之间建立起有效的联系，以患者为中心，从临床工作中发现和提出问题，将其凝炼成基础医学研究内容进行研究，然后再将基础研究成果快速转向临床应用，使其真正发挥作用。
