--- a/痛，并堕落着.md
+++ b/痛，并堕落着.md
@@ -17,17 +17,13 @@
 
 外加撞见那个过去的，仰望星空的自己。
 
-《苏菲的世界》里提过三个问题：
-
-> 我是谁，
-
 # 一、过去
 
 ## 幼年
 
-幼年，我可能同别人不太一样……不太喜欢在外面玩，而是喜欢找一本书看。于是，在很早的时候读到宇宙的形成以及未来的去向，我突然意识到其实我纯粹是一个巧合，一堆星尘跨越亿万年年的时空，组合成“我”这个有机体
+幼年，我可能同别人不太一样……不太喜欢在外面玩，而是喜欢找一本书看。于是，在很早的时候读到宇宙的形成以及未来的去向，我突然意识到其实我纯粹是一个巧合，一堆星尘跨越亿万年年的时空，组合成“我”这个有机体。
 
-我那个时候，并不知道，我已经得到了《苏菲的世界》里三大终极问题之一的答案：
+
 
 > 我从哪里来？
 
@@ -38,7 +34,9 @@
 > 来，课代表把名字记下来。
 > <p style="text-align: right;">——高中语文老师</p>
 
-高中的课程对我而言，并没有什么趣味可言。无尽的罚写，重默什么的，都已经习惯了。但是，我一直在探求生命是什么这个儿时遗留下来的问题。于是，我选择了一条在我的高中没有人尝试走过的路——**生物竞赛** 。对于别人而言，可能只求生物能拿个*A*<span class="know" title="你知道的太多了" style="backgroud:black">垃圾江苏高考制度，就关心语数英……</span>。不过对于我而言，生命科学是一门真正能激起我的感情的学科。解剖开一朵寻常的小花，看到这轻薄的花瓣包裹起来的生命竟是如此精美，其色彩、形态、气味的配合如此构思巧妙，如此符合逻辑，她觉得太不可思议、太神奇美丽，足以让我长时间沉醉其中、深受感动。
+高中的课程对我而言，并没有什么趣味可言。无尽的罚写，重默什么的，都已经习惯了。但是，我一直在探求生命是什么这个儿时遗留下来的问题。于是，我选择了一条在我的高中没有人尝试走过的路——**生物竞赛** 。对于别人而言，可能只求生物能拿个*A*<span class="know" title="你知道的太多了" style="backgroud:black">垃圾江苏高考制度，就关心语数英……</span>。不过对于我而言，生命科学是一门真正能激起我的感情的学科。解剖开一朵寻常的小花，看到这轻薄的花瓣包裹起来的生命竟是如此精美，其色彩、形态、气味的配合如此构思巧妙，如此符合逻辑，她觉得太不可思议、太神奇美丽，足以让我长时间沉醉其中、深受感动。自己足够幸运，在高中里面就找到自己的方向。
+
+高三，没什么好说的，和全国的所有高中生一样，
 
 最后高考成绩出来了——物理、生物双A+，我毫不惊讶，但是语数英的总分，让我和自己的梦想中国科学院大学生命科学系擦肩而过。
 
@@ -48,7 +46,11 @@
 
 这学期开学，我加入了一大堆社团，试着探求自己究竟是谁，将往何处去。很奇怪，时间就这么……过去了， steam 本学期游玩时间，还没有我高考期间一个月玩的多，考试也是得过且过，直到放寒假，脱开了繁杂的医学课程，我才意识到自己出了什么问题。
 
-反思自己为什么想学习生命科学，无非还是出自于儿时对死亡的恐惧。实际上，医学和生命科学之间，离得并不算太远。只是我一直都没有意识到这一点而已，只是我一直都没有
+反思自己为什么想学习生命科学，无非还是出自于儿时对死亡的恐惧。实际上，医学和生命科学之间，离得并不算太远。只是我一直都没有意识到这一点而已。
+
+我们为什么那么惧怕死亡？或许我们真正惧怕的是“空虚”。“死亡”让我们难以安适，使我们无法忍受，或许就是因为在很多人看来，“死亡”就意味着“自我”的彻底消散，自己化为“虚无”？我们不能想象，“我”随风而逝，从此世上没有了这个“我”，“我”不存在了？我们害怕空虚，也害怕死亡，而我们对死亡的害怕是不是正因为我们觉得那将是永恒的“空虚”？
+
+若果真如此，消除“空虚”就比超越“死亡”更为关键。或者说，与其煞费苦心却徒劳无功地去计较生命的长短，不如去沉思如何使用我们有限的生命，使之绝不空虚，这意义显得更为重大。
 
 > 当人不再惧怕直面孤单，而是坦然地安于孤单，那么他也就懂得了尊重孤单，学会了将孤单视为生活之友，而当他在善意地感受孤单的同时，他已然成长为享受孤独的思想者。
 > <p style="text-align: right;">——陈果《好的孤独》</p>
