--- a/临床药理学处方辨析/案例1.md
+++ b/临床药理学处方辨析/案例1.md
@@ -8,16 +8,16 @@
 一个月后的治疗方案如下：
 
 > 阿托伐他汀钙片（立普妥） 20 mg
-阿司匹林肠溶微粒胶囊（伯基） 10 mg
-瑞格列奈片（孚来迪） 0.5 mg
-盐酸贝那普利片（洛汀新） 10 mg
-甲钴胺片（弥可保） 500 μg
-格列吡嗪控释片（瑞易宁） 5 mg
-硫酸氢氯吡格雷片（波立维） 75 mg
-苯磺酸氢氯地平片（络活喜） 5 mg
-银杏叶片，1片（40 mg）/次，3次/日
-果糖注射液 250 mL 2瓶
-疏血通注射液 2 mL/支 3支
+> 阿司匹林肠溶微粒胶囊（伯基） 10 mg
+> 瑞格列奈片（孚来迪） 0.5 mg
+> 盐酸贝那普利片（洛汀新） 10 mg
+> 甲钴胺片（弥可保） 500 μg
+> 格列吡嗪控释片（瑞易宁） 5 mg
+> 硫酸氢氯吡格雷片（波立维） 75 mg
+> 苯磺酸氢氯地平片（络活喜） 5 mg
+> 银杏叶片，1片（40 mg）/次，3次/日
+> 果糖注射液 250 mL 2瓶
+> 疏血通注射液 2 mL/支 3支
 
 # 药物分析
 
