增加说明书内容

--- a/临床药理学处方辨析/案例1.md
+++ b/临床药理学处方辨析/案例1.md
@@ -53,4 +53,23 @@
 
 作为对洋地黄和/或利尿剂反应不佳的充血性心力衰竭病人（NYHA分级Ⅱ-Ⅳ）的辅助治疗
 
-##
+## 甲钴胺片(内源性维生素B12)
+用于修复
+### 药理
+甲钴胺是一种内源性的辅酶B12，参与一碳单位循环，在由同型半胱氨酸合成蛋氨酸的转甲基反应过程中起重要作用。
+动物实验发现，本品比氰钴胺易于进入神经元细胞器，参与脑细胞和脊髓神经元胸腺嘧啶核苷的合成，促进叶酸的利用和核酸代谢，且促进核酸和蛋白质合成作用较氰钴胺强；能促进轴突运输功能和轴突再生，使链脲霉素诱导的糖尿病大鼠坐骨神经轴突骨架蛋白的运输正常化；对药物引起的神经退变，如阿霉素、丙烯酰胺、长春新碱引起的小鼠轴突退变及自发高血压大鼠神经疾病，具有抑制作用；能使延迟的神经突触传递和神经递质减少恢复正常，通过提高神经纤维兴奋性，恢复终板电位诱导，使饲以胆碱缺乏饲料大鼠的脑内乙酰胆碱恢复到正常水平。体外研究表明，甲钴胺可促进培养的大鼠组织中卵磷脂的合成和神经元髓鞘形成。
+毒理研究：
+生殖毒性：在大鼠和小鼠致畸敏感期经口给予甲钴胺0.2，2.0，20mg/kg/d，胎仔和新生仔中未见异常和致畸征象。
+
+## 格列吡嗪控释片（瑞易宁）
+
+## 硫酸氢氯吡格雷片（波立维）
+
+## 苯磺酸氢氯地平片（络活喜）
+
+## 银杏叶片
+
+## 果糖注射液
+体内高糖还缺糖吗？答案是缺。因为酮症是胰岛素的绝对不足，体内的糖无法利用，因此脂肪分解 产生酮体，是供能的。而糖的受体在没有胰岛素的支持下会像大脑反映情况，大脑会调动肝糖原进行补充，尽管问题不是缺糖。而过高的糖导致的利尿作用使水分和糖在尿里大量排出，也加重了血液的糖浓度。因此体内虽然高血糖，但并不是糖多了，而是肝糖原分解，缺水导致的高血糖。实际上尿糖都流失掉了，肝糖原也浪费了。所以在脂肪分解受抑制的情况下，一定要补糖。
+
+## 疏血通注射液
