--- a/临床药理学处方辨析/案例1.md
+++ b/临床药理学处方辨析/案例1.md
@@ -1,7 +1,7 @@
 > 患者×××，男，55岁，高血压，糖尿病，冠心病，
 因眩晕晚急诊，查血压：130/180 mmHg ，血糖 20 mmol/L 。
 给予降压降糖处理，患者自行回家。
-次日病情加重再次急诊，眩晕、呕吐，短暂意识不清。体检面瘫、左侧肢体偏瘫，行走平衡失调，向一侧摔倒。
+次日病情加重再次急诊，眩晕、呕吐，短暂意识不清。体检面瘫、左侧肢体偏瘫，行走平衡失调，向一侧摔倒。//出血位置在小脑左脑
 病理反射阳性， CT 发现小脑近脑干部梗塞 //就是中风，高血糖脑梗塞。
 如何治疗？
 
@@ -61,11 +61,16 @@
 毒理研究：
 生殖毒性：在大鼠和小鼠致畸敏感期经口给予甲钴胺0.2，2.0，20mg/kg/d，胎仔和新生仔中未见异常和致畸征象。
 
-## 格列吡嗪控释片（瑞易宁）
+## 格列吡嗪控释片（瑞易宁）（非胰岛素依赖型糖尿病降糖药）
 
-## 硫酸氢氯吡格雷片（波立维）
+## 硫酸氢氯吡格雷片（波立维）(血小板聚集抑制药)
+### 与阿司匹林联合用药
+‐ 非 ST 段抬高性急性冠脉综合征（不稳定性心绞痛或非 Q 波心肌梗死）患者，应以单次负荷量氯吡格雷 300mg 开始（合用阿司匹林 75mg～325mg/日），然后以 75mg 每日1 次连续服药。由于服用较高剂量的阿司匹林有较高的出血危险性，故推荐阿司匹林的每日维持剂量不应超过 100mg。最佳疗程尚未正式确定。临床试验资料支持用药 12个月。用药 3 个月后表现出最大效果（参见【临床试验】）。
+‐ ST 段抬高性急性心肌梗死：应以负荷量氯吡格雷开始，然后以 75mg 每日 1 次，合用阿司匹林，可合用或不合用溶栓剂。对于年龄超过 75 岁的患者，不使用氯吡格雷负荷剂量。在症状出现后应尽早开始联合治疗，并至少用药 4 周。目前还没有研究对联合使用氯吡格雷和阿司匹林超过 4 周后的获益进行证实（参见【临床试验】）。
 
-## 苯磺酸氢氯地平片（络活喜）
+**可能由于高血压导致出血**
+
+## 苯磺酸氢氯地平片（络活喜）(钙离子拮抗剂)
 
 ## 银杏叶片
 
@@ -73,3 +78,7 @@
 体内高糖还缺糖吗？答案是缺。因为酮症是胰岛素的绝对不足，体内的糖无法利用，因此脂肪分解 产生酮体，是供能的。而糖的受体在没有胰岛素的支持下会像大脑反映情况，大脑会调动肝糖原进行补充，尽管问题不是缺糖。而过高的糖导致的利尿作用使水分和糖在尿里大量排出，也加重了血液的糖浓度。因此体内虽然高血糖，但并不是糖多了，而是肝糖原分解，缺水导致的高血糖。实际上尿糖都流失掉了，肝糖原也浪费了。所以在脂肪分解受抑制的情况下，一定要补糖。
 
 ## 疏血通注射液
+
+# 按照作用效果分类
+## 阿司匹林以及（抗血小板凝结）
+根据患者的ECASS分型做出治疗选择。对于HI-1型及HI-2型患者可继续给予抗血小板药物, 对于PH-1型及 PH-2型患者应停用抗血小板药物，但不需使用止血药物。
