--- a/临床药理学处方辨析/案例1.md
+++ b/临床药理学处方辨析/案例1.md
@@ -32,22 +32,16 @@
 
 # 药物分析
 
-## 立普妥（他汀类药物）
+## 立普妥（他汀类药物，降脂药）
 ### 药理
 他汀类药物，作用机理都有抑制羟甲基戊二酰辅酶 A(HMG-CoA)还原酶而起到降低胆固醇的功效。
+
 
 ## 阿司匹林（水杨酸类）
 
 ## 孚来迪（非胰岛素依赖型糖尿病降糖药）
 ### 药理
 本品为短效口服降血糖药,通过促进胰岛腺β细胞的胰岛素分泌,降低血糖水平。其作用机理是通过与β细胞膜上的特定位点结合,关闭细胞膜上ATP依赖性钾通道,使β细胞极化,导致其钙通道开放,钙的内流增加,从而促使胰岛素分泌。
-### 药代动力学
-瑞格列奈经胃肠道快速吸收、导致血浆药物浓度迅速升高。服药后1小时内血浆药物浓度达峰值:然后血浆浓度迅速下降。4—6小时内被清除。血浆半衰期约为1小时。瑞格列奈与人血浆蛋白的结合大于98%。瑞格列奈几乎全部被代谢,代谢物未见有任何临床意义的降血糖作用。瑞格列奈及其代谢产物主要自胆汁排泄,很小部分(小于8%)代谢产物自尿排出。粪便中的原形药物少于2%。 据国外文献报道.对肾功能正常(CrCl>80mL/min)、伴有轻微和中度肾功能损伤(CrCl=40~80mL/min)和严重肾
-### 药物相互作用
-1.下列药物可增强瑞格列奈片的降血糖作用:单胺氧化酶抑制剂(MAOI),非选择性β受体阻滞剂,ACE抑制剂,非甾体抗炎药,水杨酸盐,奥曲肽,酒精以及促合成代谢的激素。β受体阻滞剂可能会掩盖低血糖症状。酒精可能会加重或延长由瑞格列奈片所致的低血糖症状。
-2.下列药物可减弱瑞格列奈片的降血糖作用:口服避孕药,噻嗪类药,皮质激素,达那唑,甲状腺激素和拟交感神经药。
-3.瑞格列奈片不影响地高辛、茶碱和法华令的药代动力学特性,西米替西丁也不影响瑞格列奈片的药代动力学特性。
-4.体外研究结果显示瑞格列奈片主要由P450(CYP3A4)诱导剂代谢。所以,CYP3A4抑制剂如酮康唑,伊曲康唑、红霉素、氟康唑、米比法地尔可能升高瑞格列奈片血浆水平。而能诱导CYP3A4的化合物如利福平或苯妥英可能降低瑞格列奈片血浆水平。因不了解其诱导或抑止的程度,应禁忌上述药物与瑞格列奈片合并使用。
 
 ## 洛汀新（血管紧张素）
 
@@ -70,9 +64,10 @@
 
 **可能由于高血压导致出血**
 
-## 苯磺酸氢氯地平片（络活喜）(钙离子拮抗剂)
+## 苯磺酸氨氯地平片（络活喜）(钙离子拮抗剂)
 
 ## 银杏叶片
+中药，这个没什么好说的。
 
 ## 果糖注射液
 体内高糖还缺糖吗？答案是缺。因为酮症是胰岛素的绝对不足，体内的糖无法利用，因此脂肪分解 产生酮体，是供能的。而糖的受体在没有胰岛素的支持下会像大脑反映情况，大脑会调动肝糖原进行补充，尽管问题不是缺糖。而过高的糖导致的利尿作用使水分和糖在尿里大量排出，也加重了血液的糖浓度。因此体内虽然高血糖，但并不是糖多了，而是肝糖原分解，缺水导致的高血糖。实际上尿糖都流失掉了，肝糖原也浪费了。所以在脂肪分解受抑制的情况下，一定要补糖。
@@ -80,5 +75,15 @@
 ## 疏血通注射液
 
 # 按照作用效果分类
-## 阿司匹林以及（抗血小板凝结）
-根据患者的ECASS分型做出治疗选择。对于HI-1型及HI-2型患者可继续给予抗血小板药物, 对于PH-1型及 PH-2型患者应停用抗血小板药物，但不需使用止血药物。
+## 抗血小板凝结
+阿司匹林与硫酸氢氯吡格雷片联合用药（抗血小板凝结）
+
+
+
+## 格列吡嗪控释片与
+
+# 此处方的不合理之处
+
+# 此处方的合理之处
+## 使用果糖注射液
+体内高糖还缺糖吗？答案是缺。因为酮症是胰岛素的绝对不足，体内的糖无法利用，因此脂肪分解 产生酮体，是供能的。而糖的受体在没有胰岛素的支持下会像大脑反映情况，大脑会调动肝糖原进行补充，尽管问题不是缺糖。而过高的糖导致的利尿作用使水分和糖在尿里大量排出，也加重了血液的糖浓度。因此体内虽然高血糖，但并不是糖多了，而是肝糖原分解，缺水导致的高血糖。实际上尿糖都流失掉了，肝糖原也浪费了。所以在脂肪分解受抑制的情况下，一定要补糖。
