--- a/互联网+手术模拟.md
+++ b/互联网+手术模拟.md
@@ -1,11 +1,15 @@
+# 计算机辅助教学技术
+
+多媒体技术无疑给临床外科教学插上了一对翅膀，使现代教学的模式、内容、方法、手段、技术，甚至教学的体制都发生着变革。它使授课方式从以往的“填鸭式”转化成为学生自主学习，将教师在讲台上一对多授课变为灵活的一对一的人机授课方式，真正实现了因材施教。学生可以根据自己的实际情况，自主地安排学习时间和学习进度，并可以对重点、难点进行反复学习。根据当今科学技术的发展趋势，可以预测未来的临床外科教学方式将逐渐走向网络化、远程化。多媒体课件是网络化教育的一个基本条件，可以通过网络进行全球范围内的资源共享。利用虚拟现实技术，还可以进行各种外科模拟操作，使学生在掌握了一定理论知识的基础上进行虚拟实践，尽可能贴近临床真实意境，也更符合现代医学教育的要求。
+
 # VR 技术
 
 虚拟现实（英语：virtual reality，缩写VR），简称虚拟技术，也称虚拟环境，是利用电脑模拟产生一个三维空间的虚拟世界，提供用户关于视觉等感官的模拟，让用户感觉仿佛身历其境，可以即时、没有限制地观察三维空间内的事物。用户进行位置移动时，电脑可以立即进行复杂的运算，将精确的三维世界视频传回产生临场感。该技术集成了电脑图形、电脑仿真、人工智能、感应、显示及网络并行处理等技术的最新发展成果，是一种由电脑技术辅助生成的高技术模拟系统。
 
-虚拟现实技术(VR)主要包括模拟环境、感知、自然技能和传感设备等方面。模拟环境是由计算机生成的、实时动态的三维立体逼真图像。感知是指理想的 VR 应该具有一切人所具有的感知。除计算机图形技术所生成的视觉感知外，还有听觉、触觉、力觉、运动等感知，甚至还包括嗅觉和味觉等，也称为多感知。自然技能是指人的头部转动，眼睛、手势、或其他人体行为动作，由计算机来处理与参与者的动作相适应的数据，并对用户的输入作出实时响应，并分别反馈到用户的五官。传感设备是指三维交互设备，例如。
+虚拟现实技术(VR)主要包括模拟环境、感知、自然技能和传感设备等方面。模拟环境是由计算机生成的、实时动态的三维立体逼真图像。感知是指理想的 VR 应该具有一切人所具有的感知。除计算机图形技术所生成的视觉感知外，还有听觉、触觉、力觉、运动等感知，甚至还包括嗅觉和味觉等，也称为多感知。自然技能是指人的头部转动，眼睛、手势、或其他人体行为动作，由计算机来处理与参与者的动作相适应的数据，并对用户的输入作出实时响应，并分别反馈到用户的五官。传感设备是指三维交互设备，例如以 HTC VIVE 与 Oculus Rift 为代表的虚拟显示眼镜、交互手柄以及触觉反馈手套等。
 
 <!-- 虚拟现实技术在教育培训领域大有用武之地。为真实实验不具备或难以完成的教学功能创造条件。在涉及高危或极端的环境、不可及或不可逆的操作，高成本、高消耗、大型或综合训练等情况时，虚拟现实技术能提供可靠、安全和经济的实验项目。华东理工大学的G-Magic虚拟现实实验室，就是高校虚拟现实教学的一个范例。该实验室拥有CAVE洞穴式虚拟现实系统，可以把大学生设计的作品投影到墙面、天花板和地面上。比如，学生设计了一间淋浴房，他能利用这套系统把它展现在实验室里，和真实的淋浴房一样大小。营造出这种教学环境后，教师就能与学生更方便地交流各个环节的设计优劣，并随时做出修改。-->
 
-当下，医疗技术在不断的发展，医护人员的技术水平需要进一步提高，医护人员通过翻阅资料来不断的专研学术知识，包括医疗器械的使用和说明、多种疾病的诊断和治疗，对人体多种解剖手术的学习和研究，等等很多医疗学术等待医护人员去不断探索，然而现有技术中医护人员很多在学术研究中进行手术的学习和锻炼过程都是观看视频或者临床观摩其他医护人员来学习研究，对于实际动手能力没有得到更好的锻炼。
+<!-- 摘自游侠网 -->
 
-# 计算机辅助教学技术
+虚拟现实技术在教育培训领域大有用武之地。为真实实验不具备或难以完成的教学功能创造条件。在涉及高危或极端的环境、不可及或不可逆的操作，高成本、高消耗、大型或综合训练等情况时，虚拟现实技术能提供可靠、安全和经济的解决方案。当下，医疗技术在不断的发展，医护人员的技术水平需要进一步提高。医护人员通过翻阅资料来不断的专研学术知识。医疗器械的使用和、疾病的诊断和治疗，对人体多种解剖手术的学习和研究等等很多医疗学术等待医护人员去不断探索。然而，现有技术中，医护人员很多在学术研究、观看视频或者临床观摩其他医护人员来中进行后期的学习，对于实际动手能力没有得到更好的锻炼。除此以外，现有的医学教学中，大多是使用人体模型或是尸体（怎么说？）进行，一旦操作失误，动物或人体标本就会报废，训练代价过高昂。这直接导致很多学生接受训练的次数过少，真正在临床上实践时经验不足，对患者的人生安全有一定影响。VR 技术，由于可以在虚拟环境下对真实手术操作进行模拟，
