--- a/互联网+手术模拟.md
+++ b/互联网+手术模拟.md
@@ -1,5 +1,9 @@
 # 计算机辅助教学技术
 
+多媒体技术是一种把文本（Text）、图形（Graphics）、图像（Images）、动画（Animation）和声音（Sound）等形式的信息结合在一起，并通过计算机进行综合处理和控制，能支持完成一系列交互式操作的信息技术。而多媒体课件是指利用多媒体技术制作的教学软件，能够实现个别化教学的形式。
+
+多媒体课件教学具有以下特点:（1）集成性，能够对信息进行多通道统一获取、存储、组织与合成;（2）控制性，多媒体技术是以计算机为中心，综合处理和控制多媒体信息，并按人的要求以多媒体形式表现出来，同时作用于人的多种感官;（3）交互性，交互性是多媒体应用有别于传统信息交流媒体的主要特点之一，传统信息交流媒体只能单向地、被动地传播信息，而多媒体技术则可以实现人对信息的主动选择和控制;（4）非线性，多媒体技术的非线性特点将改变传统循序性的读写模式。以往学生读写方式大都采用章、节、页的框架，循序渐进地获取知识，而多媒体技术将借助超文本链接（Hyper Text Link）的方法，把内容以一种更灵活、更具变化的方式呈现给学生;（5）实时性，当操作者给出操作命令时，相应的多媒体信息都能够得到实时控制;（6）信息使用的方便性，学生可以按照自己的需要、兴趣和认知特点来使用信息任取图、文、声等信息表现形式。
+
 多媒体技术无疑给临床外科教学插上了一对翅膀，使现代教学的模式、内容、方法、手段、技术，甚至教学的体制都发生着变革。它使授课方式从以往的“填鸭式”转化成为学生自主学习，将教师在讲台上一对多授课变为灵活的一对一的人机授课方式，真正实现了因材施教。学生可以根据自己的实际情况，自主地安排学习时间和学习进度，并可以对重点、难点进行反复学习。根据当今科学技术的发展趋势，可以预测未来的临床外科教学方式将逐渐走向网络化、远程化。多媒体课件是网络化教育的一个基本条件，可以通过网络进行全球范围内的资源共享。利用虚拟现实技术，还可以进行各种外科模拟操作，使学生在掌握了一定理论知识的基础上进行虚拟实践，尽可能贴近临床真实意境，也更符合现代医学教育的要求。
 
 # VR 技术
