--- a/互联网+手术模拟.md
+++ b/互联网+手术模拟.md
@@ -1,4 +1,4 @@
-# 计算机辅助教学技术
+# 多媒体技术
 
 多媒体技术是一种把文本（Text）、图形（Graphics）、图像（Images）、动画（Animation）和声音（Sound）等形式的信息结合在一起，并通过计算机进行综合处理和控制，能支持完成一系列交互式操作的信息技术。而多媒体课件是指利用多媒体技术制作的教学软件，能够实现个别化教学的形式。
 
